--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
+   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
-<body>
-   <h1>man</h1>
 
-   
-   <script src="../scripts/popup.js"></script>
-</body>
+<body>
+
+      <div class="popupdiv">
+
+         <button id="authorize" class="button">Authorize</button>
+
+      </div>
+
+
+
+      <script src="../scripts/popup.js"></script>
+   </body>
 </html>
