--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
-   <link rel="stylesheet" type="text/css" href="../style.css">
+   <link rel="stylesheet" type="text/css" href="../styles/popup.css">
 </head>
 
 <body>
