added guild selection section

--- a/src/html/signOut.html
+++ b/src/html/signOut.html
@@ -23,10 +23,25 @@
          </div>
 
 
-         <div class="channelContainer">
+         <div class="channelContainer" id="guildContainer">
+            <h3 class="channelHeader">SELECT GUILD</h3>
+            <button class="channelContainerBtn" id="guildContainerBtn">Personal Server</button>
+            <div class="list" id="guildList">
+               <button class="item" id="guildItem">Item</button>
+               <button class="item" id="guildItem">Item</button>
+               <button class="item" id="guildItem">Item</button>
+               <button class="item" id="guildItem">Item</button>
+               <button class="item" id="guildItem">Item</button>
+               <button class="item" id="guildItem">Item</button>
+               <button class="item" id="guildItem">Item</button>
+               
+            </div>
+         </div>
+
+         <div class="channelContainer" id="channelContainer">
             <h3 class="channelHeader">SELECT PIN CHANNEL</h3>
-            <button class="channelContainerBtn">#discolog</button>
-            <div class="list">
+            <button class="channelContainerBtn" id="channelContainerBtn">#discolog</button>
+            <div class="list" id="channelList">
                <button class="item">Item</button>
                <button class="item">Item</button>
                <button class="item">Item</button>
