display first server in the guild selection button

--- a/src/html/signOut.html
+++ b/src/html/signOut.html
@@ -25,7 +25,7 @@
 
          <div class="channelContainer" id="guildContainer">
             <h3 class="channelHeader">SELECT GUILD</h3>
-            <button class="channelContainerBtn" id="guildContainerBtn">Personal Server</button>
+            <button class="channelContainerBtn" id="guildContainerBtn">Didn't work</button>
             <div class="list" id="guildList">
                <button class="item" id="guildItem">Item</button>
                <button class="item" id="guildItem">Item</button>
