--- a/src/html/home.html
+++ b/src/html/home.html
@@ -25,9 +25,8 @@
 
          <div class="channelContainer" id="guildContainer">
             <h3 class="channelHeader">SELECT GUILD</h3>
-            <!-- <button class="channelContainerBtn" id="guildContainerBtn">Didn't work</button> -->
-            <div class="list" id="guildList">
             <div  id="guildList">
+            </div>
                
             </div>
          </div>
