added image black and white filter for servers with no bot

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -25,8 +25,7 @@
 
          <div class="channelContainer" id="guildContainer">
             <h3 class="channelHeader">SELECT GUILD</h3>
-            <div  id="guildList">
-            </div>
+            <div class="list"  id="guildList"></div>
                
             </div>
          </div>
