--- a/src/html/home.html
+++ b/src/html/home.html
@@ -33,6 +33,8 @@
             <button class="channelContainerBtn" id="channelContainerBtn">#discolog</button>
             <div class="list" id="channelList">
             </div>
+
+            <Button class="button" id="doneBtn">Done</Button>
          </div>
 
 
