added more styling

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -24,12 +24,12 @@
 
 
          <div class="channelContainer" id="guildContainer">
-            <h3 class="channelHeader">SELECT GUILD</h3>
+            <h3 class="channelHeader">Please select a server to get started!</h3>
             <div class="list"  id="guildList"></div>
          </div>
 
          <div class="channelContainer" id="channelContainer">
-            <h3 class="channelHeader">SELECT PIN CHANNEL</h3>
+            <h3 class="channelHeader">Select a channel where you would like to save your messages!</h3>
             <button class="channelContainerBtn" id="channelContainerBtn">#discolog</button>
             <div class="list" id="channelList">
             </div>
