--- a/src/html/home.html
+++ b/src/html/home.html
@@ -16,7 +16,7 @@
             <button id="logout" class="logout-btn">Logout</button>
          </div>
 
-         <div class="profileContainer">
+         <div class="profileContainer" id="profileContainer">
             <img class="circleImage avatarImage" id="avatar" />
             <h3 class="userName" id="userName">DiscoSave</h3>
             <h3 class="userID">UserID: <span id="userID">654216497854546191</span></h3>
@@ -26,6 +26,11 @@
          <div class="channelContainer" id="guildContainer">
             <h3 class="channelHeader">Please select a server to get started!</h3>
             <div class="list"  id="guildList"></div>
+         </div>
+
+         <div class="selectedGuildContainer profileContainer" id="selectedGuildContainer">
+            <img class="circleImage avatarImage"  id="selectedGuildImage" />
+            <h3 class="userName" id="selectedGuildTitle"></h3>
          </div>
 
          <div class="channelContainer" id="channelContainer">
