added guild change btn

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -30,7 +30,11 @@
 
          <div class="selectedGuildContainer profileContainer" id="selectedGuildContainer">
             <img class="circleImage avatarImage"  id="selectedGuildImage" />
-            <h3 class="userName" id="selectedGuildTitle"></h3>
+            <div class="changeGuildContainer">
+               <h3 class="userName" id="selectedGuildTitle"></h3>
+               <button class="button" style="margin-top: 20px; margin-left: 20px; height: 30px; width: 100px; border-radius: 0;" id="changeGuildBtn">Change Guild</button>
+            </div>
+           
          </div>
 
          <div class="channelContainer" id="channelContainer">
