slected channel saved

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -43,7 +43,7 @@
             <div class="list" id="channelList">
             </div>
 
-            <Button class="button" id="doneBtn">Done</Button>
+            <!-- <Button class="button" id="doneBtn">Done</Button> -->
          </div>
 
 
